Bad display on mobile ... fixing

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -42,22 +42,22 @@ body {
     margin:0px;
     padding:0px;
     text-transform:uppercase;
-    width:70%;
+    width:100%;
 }
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    margin: 0 0;
-    /*position:absolute;             /* position in the center of the screen */
-    /*left:30%;
-    /*top:50%;*/
-    height:50px;                   /* text area height */
-    width:125px;                  /* text area width */
+     /*background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
+    position:absolute;             /* position in the center of the screen */
+    left:30%;
+    top:10%;
+    margin-top: 0;
+    height:600px;                   /* text area height */
+    width:300px;                  /* text area width */
     text-align:center;
     /*padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
     /*margin:-115px 0px 0px -112px;   offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+                           /* offset horizontal: half of text area width */
 }
 
 /* Landscape layout (with min-width) */
@@ -117,4 +117,9 @@ h1 {
 
 li{
   list-style-type: none;
+}
+
+select, input{
+  height:50px;
+  width: 200px;
 }
